cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_140.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:38: error: DEAD_STORE
  The value written to &p (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:38:18: Write of unused value
36.       /* Check syntax and work out the encoded value (if correct) */
37.       if ((*p & 0x80) == 0) {
38.           value = *p++ & 0x7f;
                       ^
39.           ret = 1;
40.       } else if ((*p & 0xe0) == 0xc0) {
